Experimental support for FA 5.

--- a/tests/fixtures/flag.html.twig
+++ b/tests/fixtures/flag.html.twig
@@ -7,6 +7,6 @@
     </style>
 </head>
 <body>
-<div class="icons">{% fa flag %}</div>
+<div class="icons">{% fa regular flag %}</div>
 </body>
 </html>
